--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -225,7 +225,7 @@
     <button class="btn dropdown-item nav-link"
             type="button"
             role="menuitem"
-            (click)="advancedSearch.modal.open(advancedSearch.title)"
+            (click)="advancedSearch.modal?.open(advancedSearch.title)"
             i18n-aria-label
             aria-label="Erweiterte Suche"
             i18n-title
