--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -202,7 +202,7 @@
                 </div>
             </ng-container>
 
-            <div *ngIf="this.rss.length === 0">
+            <div *ngIf="rss.length === 0">
                 <div class="text-center">
                     <span i18n>Leider konnten wir noch keine Tickets finden. Bei Bedarf können Sie uns gerne
                         kontaktieren.</span>
