--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -2,8 +2,11 @@
     <h1 i18n>Niedersächsischer Immobilienpreisindex - NIPIX</h1>
 </div>
 
-<div *ngIf="errorMsg.length>0" class="container my-4">
-    <div *ngFor="let msg of errorMsg" class="alert alert-danger" role="alert">
+<div *ngIf="errorMsg.length>0"
+     class="container my-4">
+    <div *ngFor="let msg of errorMsg"
+         class="alert alert-danger"
+         role="alert">
         <span class="h4 alert-heading">
             <svg xmlns="http://www.w3.org/2000/svg"
                  width="1em"
@@ -15,17 +18,20 @@
                  focusable="false"
                  aria-hidden="true">
                 <path
-                        d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z" />
+                      d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z" />
                 <path
-                        d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z" />
+                      d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z" />
             </svg>
-            <span class="ml-2" i18n>Fehler</span>
+            <span class="ml-2"
+                  i18n>Fehler</span>
         </span>
-        <p class="m-0" i18n>{{ msg }}</p>
+        <p class="m-0"
+           i18n>{{ msg }}</p>
     </div>
 </div>
 
-<div *ngIf="useable" class="row mh-100"
+<div *ngIf="useable"
+     class="row mh-100"
      [ngClass]="{'rowrtl': nipixStatic.layoutRtl === true}">
     <div class="col-sm-8 p-0"
          *ngIf="isBrowser">
@@ -356,7 +362,7 @@
                             i18n>Quartal</th>
                         <ng-container *ngFor="let data of nipixRuntime.calculated.drawData; let d = index">
                             <th scope="col"
-                                *ngIf="d < nipixRuntime.calculated.drawData.length-1">
+                                *ngIf="nipixRuntime.calculated.drawData && d < nipixRuntime.calculated.drawData.length-1">
                                 {{nipixRuntime.formatter.findName(data.name, false, false, false)}}
                             </th>
                         </ng-container>
@@ -365,7 +371,9 @@
                         <tr *ngIf="q >= nipixRuntime.state.rangeStartIndex && q <= nipixRuntime.state.rangeEndIndex">
                             <td>{{ quart }}</td>
                             <ng-container *ngFor="let data of nipixRuntime.calculated.drawData; let d = index">
-                                <td *ngIf="d < nipixRuntime.calculated.drawData.length-1"> {{data['data'][q]}} </td>
+                                <td
+                                    *ngIf="nipixRuntime.calculated.drawData && d < nipixRuntime.calculated.drawData.length-1">
+                                    {{data['data'][q]}} </td>
                             </ng-container>
                         </tr>
                     </ng-container>
