fix: add gemarkungsname for areas without brw

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -267,8 +267,8 @@
                         <small class="ml-2 mr-2">
                             <span i18n>Gemarkung</span>:
                             {{ flurstueck.features[0]?.properties?.['gemarkungsnummer'] }}
-                            <ng-container *ngIf="filteredFeatures">({{ filteredFeatures[0].properties?.['gema'] }})
-                            </ng-container>
+                            ({{gemarkung ? gemarkung :
+                            (flurstueck.features[0]?.properties?.['gemarkungsnummer'] | gemarkung | async)}})
                         </small>
                     </span>
                     <wbr>
