--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -45,6 +45,7 @@
             <div class="text-center">
                 <a class="btn btn-primary btn-lg"
                    href="mailto:{{ mail }}"
+                   rel="noopener noreferrer nofollow"
                    role="button"
                    i18n-title
                    title="Feedback über E-Mail geben">
