--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -72,7 +72,8 @@
                            aria-label="E-Mail"></i>
                     </th>
                     <td>
-                        <a href="mailto:geodatendienste@lgln.niedersachsen.de">geodatendienste@lgln.niedersachsen.de</a>
+                        <a href="mailto:geodatendienste@lgln.niedersachsen.de"
+                           rel="noopener noreferrer nofollow">geodatendienste@lgln.niedersachsen.de</a>
                     </td>
                 </tr>
                 <tr>
