Updated some texts

--- a/power/src/app/static/accessibility/accessibility.component.html
+++ b/power/src/app/static/accessibility/accessibility.component.html
@@ -1,6 +1,5 @@
 <main class="container">
     <h1 i18n>Erklärung zur Barrierefreiheit</h1>
-
     <p i18n>Informationen über die Zugänglichkeit dieser Webseiten gemäß § 9b NBGG sowie über diesbezügliche
         Kontaktmöglichkeiten.</p>
     <p i18n>Diese Webseiten sind mit den Vorgaben der harmonisierten europäischen Norm EN 301 549 V2.1.2 (08-2018)
@@ -86,8 +85,8 @@
     <p i18n>Diese Erklärung wurde am 15.09.2021 erstellt. Die Einschätzung basiert auf einer Selbstbewertung.</p>
 
     <h2 i18n>Feedback und Kontaktangaben</h2>
-    <p i18n>Über den Link "Kontakt" oder "Impressum" im Footer am Ende der Seite können Sie Mängel in Bezug auf die
-        Einhaltung der Barrierefreiheitsanforderungen mitteilen.</p>
+    <p i18n>Über den Link "Feedback" im Navigationsmenü oder "Impressum" im Footer am Ende der Seite können Sie Mängel
+        in Bezug auf die Einhaltung der Barrierefreiheitsanforderungen mitteilen.</p>
 
     <h2 i18n>Schlichtungsverfahren</h2>
     <p i18n>Bei nicht zufriedenstellenden Antworten aus oben genannter Kontaktmöglichkeit können Sie bei der
@@ -98,6 +97,7 @@
         und öffentlichen Stellen des Landes Niedersachsen, zum Thema Barrierefreiheit in der IT, beizulegen. Das
         Schlichtungsverfahren ist kostenlos. Es muss kein Rechtsbeistand eingeschaltet werden.</p>
     <p i18n>Direkt kontaktieren können Sie die Schlichtungsstelle unter</p>
+
     <address>
         <table class="table table-responsive borderless">
             <caption class="sr-only"
